--- a/index.html
+++ b/index.html
@@ -23,32 +23,32 @@
 
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="../Code/css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../Code/css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
 
     <!-- OWl carousel CSS -->
-    <link rel="stylesheet" href="../Code/css/owl-carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="../Code/css/owl-carousel/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
 
     <!-- Responsive Tabs CSS -->
-    <link rel="stylesheet" href="../Code/css/responsive-tabs/responsive-tabs.min.css">
+    <link rel="stylesheet" href="css/responsive-tabs/responsive-tabs.min.css">
 
     <!-- Magnific popup -->
-    <link rel="stylesheet" href="../Code/css/magnific-popup/magnific-popup.min.css">
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.min.css">
 
     <!-- Animate Css -->
-    <link rel="stylesheet" href="../Code/css/animate/animate.min.css">
+    <link rel="stylesheet" href="css/animate/animate.min.css">
 
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="../Code/css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="../Code/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body data-spy="scroll" data-toggle=".navbar" data-offset="65">
