--- a/index.html
+++ b/index.html
@@ -1690,37 +1690,37 @@
         <script src="../Code/js/jquery.min.js"></script>
 
         <!-- Bootstrap.JS -->
-        <script src="../Code/js/bootstrap/bootstrap.min.js"></script>
+        <script src="js/bootstrap/bootstrap.min.js"></script>
 
         <!-- Owl carousel JS -->
-        <script src="../Code/js/owl-carousel/owl.carousel.min.js"></script>
+        <script src="js/owl-carousel/owl.carousel.min.js"></script>
 
         <!-- Waypoints -->
-        <script src="../Code/js/waypoints/jquery.waypoints.min.js"></script>
+        <script src="js/waypoints/jquery.waypoints.min.js"></script>
 
         <!-- Responsive Tabs JS -->
-        <script src="../Code/js/responsive-tabs/jquery.responsiveTabs.min.js"></script>
+        <script src="js/responsive-tabs/jquery.responsiveTabs.min.js"></script>
 
         <!-- Isotope -->
-        <script src="../Code/js/isotope/isotope.pkgd.min.js"></script>
+        <script src="js/isotope/isotope.pkgd.min.js"></script>
 
         <!-- Magnific pop -->
-        <script src="../Code/js/magnific-popup/jquery.magnific-popup.min.js"></script>
+        <script src="js/magnific-popup/jquery.magnific-popup.min.js"></script>
 
         <!-- Counter -->
-        <script src="../Code/js/counter/jquery.counterup.min.js"></script>
+        <script src="js/counter/jquery.counterup.min.js"></script>
 
         <!-- Google Map -->
         <!-- <script src=""></script> -->
 
         <!-- Easing -->
-        <script src="../Code/js/easing/jquery.easing.1.3.min.js"></script>
+        <script src="js/easing/jquery.easing.1.3.min.js"></script>
 
         <!-- WOW.js -->
-        <script src="../Code/js/wow/wow.min.js"></script>
+        <script src="js/wow/wow.min.js"></script>
 
         <!-- custom.js -->
-        <script src="../Code/js/script.js"></script>
+        <script src="js/script.js"></script>
 
 
 
