--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@
 
         <!-- jQuery -->
 
-        <script src="../Code/js/jquery.min.js"></script>
+        <script src="js/jquery.min.js"></script>
 
         <!-- Bootstrap.JS -->
         <script src="js/bootstrap/bootstrap.min.js"></script>
