--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
                             <!-- =====Member 01====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-1.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-1.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Kevin Greer</h6>
@@ -306,7 +306,7 @@
                             </div>
                             <!-- =====Member 02====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-2.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-2.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Christian cilinis</h6>
@@ -322,7 +322,7 @@
 
                             <!-- =====Member 03====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-3.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-3.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Andrea Arkov</h6>
@@ -338,7 +338,7 @@
 
                             <!-- =====Member 04====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-4.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-4.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Christian cilinis</h6>
@@ -354,7 +354,7 @@
 
                             <!-- =====Member 05====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-5.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-5.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Angela Perry</h6>
@@ -371,7 +371,7 @@
 
                             <!-- =====Member 06====== -->
                             <div class="team-member">
-                                <img src="../Code/img/team/team-6.jpg" alt="team-member" class="img-responsive">
+                                <img src="img/team/team-6.jpg" alt="team-member" class="img-responsive">
                                 <div class="team-member-overlay">
                                     <div class="team-member-info text-center">
                                         <h6>Kara Kulis</h6>
@@ -518,7 +518,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-7 col-sm-7 wow slideInLeft">
-                            <img src="../Code/img/services/laptop-with-lamp.png" alt="laptop" class="img-responsive">
+                            <img src="img/services/laptop-with-lamp.png" alt="laptop" class="img-responsive">
                         </div>
                         <div class="col-md-5 col-sm-5 wow slideInRight">
 
@@ -604,7 +604,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="../Code/img/services/service-tab-img-01.jpg" alt="Creativity">
+                                    <img src="img/services/service-tab-img-01.jpg" alt="Creativity">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="tab-bg">
@@ -630,7 +630,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="../Code/img/services/service-tab-img-02.jpg" alt="strategy">
+                                    <img src="img/services/service-tab-img-02.jpg" alt="strategy">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="tab-bg">
@@ -656,7 +656,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="../Code/img/services/service-tab-img-03.jpg" alt="Design">
+                                    <img src="img/services/service-tab-img-03.jpg" alt="Design">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="tab-bg">
@@ -682,7 +682,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <img src="../Code/img/services/service-tab-img-04.jpg" alt="Development">
+                                    <img src="img/services/service-tab-img-04.jpg" alt="Development">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="tab-bg">
@@ -748,8 +748,8 @@
 
                                 <!-- Portfolio Item 01 -->
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/001.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/001.jpg" class="img-responsive"
+                                    <a href="img/portfolio/001.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/001.jpg" class="img-responsive"
                                             alt="portfolio-1">
 
                                         <div class="portfolio-item-overlay">
@@ -774,8 +774,8 @@
                                 <!-- portfolio-item 02 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/002.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/002.jpg" class="img-responsive"
+                                    <a href="img/portfolio/002.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/002.jpg" class="img-responsive"
                                             alt="portfolio-02">
 
                                         <div class="portfolio-item-overlay">
@@ -800,8 +800,8 @@
                                 <!-- portfolio-item 03-->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/003.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/003.jpg" class="img-responsive"
+                                    <a href="img/portfolio/003.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/003.jpg" class="img-responsive"
                                             alt="portfolio-03">
 
                                         <div class="portfolio-item-overlay">
@@ -826,8 +826,8 @@
                                 <!-- portfolio-item 04 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/004.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/004.jpg" class="img-responsive"
+                                    <a href="img/portfolio/004.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/004.jpg" class="img-responsive"
                                             alt="portfolio-04">
 
                                         <div class="portfolio-item-overlay">
@@ -853,8 +853,8 @@
                                 <!-- portfolio-item 05 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/005.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/005.jpg" class="img-responsive"
+                                    <a href="img/portfolio/005.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/005.jpg" class="img-responsive"
                                             alt="portfolio-05">
 
                                         <div class="portfolio-item-overlay">
@@ -879,8 +879,8 @@
                                 <!-- portfolio-item 06 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/006.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/006.jpg" class="img-responsive"
+                                    <a href="img/portfolio/006.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/006.jpg" class="img-responsive"
                                             alt="portfolio-06">
 
                                         <div class="portfolio-item-overlay">
@@ -905,8 +905,8 @@
                                 <!-- portfolio-item 07 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/007.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/007.jpg" class="img-responsive"
+                                    <a href="img/portfolio/007.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/007.jpg" class="img-responsive"
                                             alt="portfolio-07">
 
                                         <div class="portfolio-item-overlay">
@@ -931,8 +931,8 @@
                                 <!-- portfolio-item 08 -->
 
                                 <div class="portfolio-item">
-                                    <a href="../Code/img/portfolio/008.jpg" tittle="Add Description">
-                                        <img src="../Code/img/portfolio/008.jpg" class="img-responsive"
+                                    <a href="img/portfolio/008.jpg" tittle="Add Description">
+                                        <img src="img/portfolio/008.jpg" class="img-responsive"
                                             alt="portfolio-08">
 
                                         <div class="portfolio-item-overlay">
